--- a/web/error404.html
+++ b/web/error404.html
@@ -5,54 +5,41 @@
 -->
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=0.8, minimal-ui" />
+        <meta name="theme-color" content="#36393E" />
+        <meta name="description" content="WiFi Duck" />
+        <meta name="author" content="Spacehuhn - Stefan Kremser"/>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="script.js"></script>
+        <title>WiFi Duck | Error</title>
+    </head>
+    <body>
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">WiFi Duck</a></li>
+                <li><a href="settings.html">Settings</a></li>
+                <li><a href="terminal.html">Terminal</a></li>
+                <li><a href="credits.html">About</a></li>
+            </ul>
+        </nav>
+        <div id="status"></div>
+        <main>
+            <section>
 
-<head>
-  <meta charset="UTF-8">
-
-  <meta name="viewport" content="width=device-width, initial-scale=0.8, minimal-ui">
-  <meta name="theme-color" content="#36393E">
-
-  <meta name="description" content="WiFi Duck">
-  <meta name="author" content="Spacehuhn - Stefan Kremser">
-
-  <title>WiFi Duck Not Found</title>
-
-  <link rel="stylesheet" type="text/css" href="style.css">
-
-  <script src="script.js"></script>
-</head>
-
-<body>
-
-  <nav>
-    <a href="index.html">WiFi Duck</a>
-    <a href="settings.html">Settings</a>
-  </nav>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-
-        <h2>404</h2>
-        <p>
-          Page not found :(
-        </p>
-
+				<h1>404</h1>
+				<p>
+				Page not found :(
+				</p>
+			</section>
+		</main>
         <footer>
-          <a href="settings.html">Settings</a> |
-          <a href="terminal.html">Terminal</a> |
-          <a href="credits.html">Credits</a> |
-          <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a>
-          <br><br>
-          <span id="version"></span><br>
-          Copyright (c) 2019 Stefan Kremser<br>
-          <a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
+            <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a>
+            <br><br>
+            <span id="version"></span><br> 
+            Copyright © 2019 Stefan Kremser<br>
+            <a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
         </footer>
-
-      </div>
-    </div>
-  </div>
-
-</body>
-
+    </body>
 </html>
