--- a/web/terminal.html
+++ b/web/terminal.html
@@ -1,75 +1,50 @@
 <!--
-   Copyright (c) 2019 Stefan Kremser
-   This software is licensed under the MIT License. See the license file for details.
-   Source: github.com/spacehuhn/WiFiDuck
+	Copyright (c) 2019 Stefan Kremser
+	This software is licensed under the MIT License. See the license file for details.
+	Source: github.com/spacehuhn/WiFiDuck
 -->
 <!DOCTYPE html>
 <html>
+  	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=0.8, minimal-ui">
+		<meta name="theme-color" content="#36393E">
+		<meta name="description" content="WiFi Duck">
+		<meta name="author" content="Spacehuhn - Stefan Kremser">
+		<link rel="stylesheet" type="text/css" href="style.css">
 
-<head>
-  <meta charset="UTF-8">
-
-  <meta name="viewport" content="width=device-width, initial-scale=0.8, minimal-ui">
-  <meta name="theme-color" content="#36393E">
-
-  <meta name="description" content="WiFi Duck">
-  <meta name="author" content="Spacehuhn - Stefan Kremser">
-
-  <title>WiFi Duck Terminal</title>
-
-  <link rel="stylesheet" type="text/css" href="style.css">
-
-  <style>
-    #output {
-      max-height: 100vh;
-      overflow: scroll;
-      padding: .5rem;
-      border-radius: 4px;
-    }
-  </style>
-
-  <script src="script.js"></script>
-  <script src="terminal.js"></script>
-</head>
-
-<body>
-
-  <nav>
-    <a href="index.html">WiFi Duck</a>
-    <a href="settings.html">Settings</a>
-  </nav>
-
-  <div id="status"></div>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-
-        <h2>Terminal</h2>
-
-        <input type="text" class="smooth" id="input" value="help">
-
-        <button class="primary" id="send">send</button>
-        <button class="warn" id="clear">clear</button>
-        <button id="reconnect">reconnect</button>
-
-        <p id="output"></p>
-
-        <footer>
-          <a href="settings.html">Settings</a> |
-          <a href="terminal.html">Terminal</a> |
-          <a href="credits.html">Credits</a> |
-          <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a>
-          <br><br>
-          <span id="version"></span><br>
-          Copyright (c) 2019 Stefan Kremser<br>
-          <a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
-        </footer>
-
-      </div>
-    </div>
-  </div>
-
-</body>
-
+		<script src="script.js"></script>
+		<script src="terminal.js"></script>
+    	<title>WiFi Duck | Terminal</title>
+  	</head>
+  	<body>
+		<nav>
+			<ul class="menu">
+				<li><a href="index.html">WiFi Duck</a></li>
+				<li><a href="settings.html">Settings</a></li>
+				<li><a href="terminal.html">Terminal</a></li>
+				<li><a href="credits.html">About</a></li>
+			</ul>
+		</nav>
+		<div id="status"></div>
+		<main>
+			<section>
+				<h2>Terminal</h2>
+				<input type="text" class="smooth" id="input" value="help">
+				<button class="primary" id="send">send</button>
+				<button class="warn" id="clear">clear</button>
+				<button id="reconnect">reconnect</button>
+				<div id="output" class="terminal"></div>
+			</section>
+		</main>
+		<footer>
+			<a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a>
+			<br><br>
+			<span id="version"></span><br>
+			Copyright © 2019 Stefan Kremser<br>
+			<a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
+		</footer>
+  	</body>
 </html>
+  
+  
