Modified CSS elements
Modified input and button related CSS classes and changed the copyright character back to (c)

--- a/web/credits.html
+++ b/web/credits.html
@@ -88,7 +88,7 @@
           <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a>
           <br><br>
           <span id="version"></span><br>
-          Copyright © 2019 Stefan Kremser<br>
+          Copyright (c) 2019 Stefan Kremser<br>
           <a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
 		</footer>
 	</body>
