--- a/web/index.html
+++ b/web/index.html
@@ -31,9 +31,9 @@
                 <h1>Status</h1>
                 <div class="row">
                     <p><b>SPIFFS: </b><span id="freeMemory">-</span></p>
-                    <button class=" danger" id="format">format</button>
-                    <button class=" warn" id="stop">stop</button>
-                    <button class="" id="reconnect">reconnect</button>
+                    <button class="danger" id="format">format</button>
+                    <button class="warn" id="stop">stop</button>
+                    <button class="white" id="reconnect">reconnect</button>
                 </div>
             </section>
             <section>
@@ -274,7 +274,7 @@
             <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a>
             <br><br>
             <span id="version"></span><br> 
-            Copyright © 2019 Stefan Kremser<br>
+            Copyright (c) 2019 Stefan Kremser<br>
             <a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
         </footer>
     </body>
