--- a/web/terminal.html
+++ b/web/terminal.html
@@ -30,18 +30,22 @@
 		<main>
 			<section>
 				<h2>Terminal</h2>
-				<input type="text" class="smooth" id="input" value="help">
-				<button class="primary" id="send">send</button>
-				<button class="warn" id="clear">clear</button>
-				<button id="reconnect">reconnect</button>
-				<div id="output" class="terminal"></div>
+				<div class="row">
+					<input type="text" class="smooth" id="input" value="help">
+					<button class="primary" id="send">send</button>
+					<button class="warn" id="clear">clear</button>
+					<button class="white" id="reconnect">reconnect</button>
+				</div>
+				<div class="row">
+					<div id="output" class="terminal"></div>
+				</div>
 			</section>
 		</main>
 		<footer>
 			<a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a>
 			<br><br>
 			<span id="version"></span><br>
-			Copyright © 2019 Stefan Kremser<br>
+			Copyright (c) 2019 Stefan Kremser<br>
 			<a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
 		</footer>
   	</body>
