Add French keyboard layout

--- a/web/index.html
+++ b/web/index.html
@@ -139,7 +139,7 @@
                         <tr>
                             <td><code>LOCALE</code></td>
                             <td><code>LOCALE DE</code></td>
-                            <td>Sets the keyboard layout. Currently supported: <code>DE</code>, <code>GB</code>, <code>US</code>, <code>ES</code>
+                            <td>Sets the keyboard layout. Currently supported: <code>DE</code>, <code>GB</code>, <code>US</code>, <code>ES</code>, <code>FR</code>
                             </td>
                         </tr>
                         <tr>
