--- a/web/credits.html
+++ b/web/credits.html
@@ -5,91 +5,95 @@
 -->
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=0.8, minimal-ui" />
-        <meta name="theme-color" content="#36393E" />
-        <meta name="description" content="WiFi Duck" />
-        <meta name="author" content="Spacehuhn - Stefan Kremser"/>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <title>WiFi Duck | About</title>
-    </head>
-    <body>
-        <nav>
-            <ul class="menu">
-                <li><a href="index.html">WiFi Duck</a></li>
-                <li><a href="settings.html">Settings</a></li>
-				<li><a href="terminal.html">Terminal</a></li>
-				<li><a href="credits.html">About</a></li>
-            </ul>
-        </nav>
-        <div id="status"></div>
-        <main>
-            <section>
-				<h1>Disclaimer</h1>
-				<p>
-				This is a tool.<br>
-				It's neither good nor bad.<br>
-				Use it to do good, to study and to test.<br>
-				Never use it to do harm or create damage!<br>
-				<br>
-				The continuation of this project counts on you!
-				</p>
-            </section>
-			<section>
-				<h1>License</h1>
-				<p>
-				MIT License<br>
-				Copyright (c) 2019 Stefan Kremser<br>
-				<br>
-				Permission is hereby granted, free of charge, to any person obtaining a copy
-				of this software and associated documentation files (the "Software"), to deal
-				in the Software without restriction, including without limitation the rights
-				to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-				copies of the Software, and to permit persons to whom the Software is
-				furnished to do so, subject to the following conditions:<br>
-				<br>
-				The above copyright notice and this permission notice shall be included in all
-				copies or substantial portions of the Software.<br>
-				<br>
-				THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-				IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-				FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-				AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-				LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-				OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-				SOFTWARE.
-				</p>
-			</section>
-			<section>
-				<h1>Credits</h1>
-				<p>
-				Other software used for this project:<br>
-				- <a href="https://www.arduino.cc" target="_blank">Arduino</a><br>
-				- <a href="https://github.com/adafruit/Adafruit_NeoPixel" target="_blank">Neopixel Lib</a><br>
-				- <a href="https://github.com/esp8266/Arduino" target="_blank">ESP8266 Arduino Core</a><br>
-				- <a href="https://github.com/me-no-dev/ESPAsyncTCP" target="_blank">ESPAsyncTCP</a><br>
-				- <a href="https://github.com/me-no-dev/ESPAsyncWebServer" target="_blank">ESPAsyncWebServer</a><br>
-				- <a href="https://github.com/spacehuhn/SimpleCLI" target="_blank">SimpleCLI</a>
-				</p>
-			</section>
-			<section>
-				<h1>Thanks</h1>
-				<p>
-				Thanks to everyone that helped making this project reality, especially:<br>
-				- <a href="https://deantonious.es" target="_blank">deantonious</a> for helping to design and improve the user experience<br>
-				- <a href="youtube.com/seytonic" target="_blank">Seytonic</a> for educating people about the topic<br>
-				- <a href="https://dstike.com/" target="_blank">Travis Lin</a> for creating, selling and financially supporting us with custom made hardware<br>
-				- and YOU for using it!
-				</p>
-			</section>
-		</main>
-        <footer>
-          <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a>
-          <br><br>
-          <span id="version"></span><br>
-          Copyright (c) 2019 Stefan Kremser<br>
-          <a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
-		</footer>
-	</body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=0.8, minimal-ui" />
+  <meta name="theme-color" content="#36393E" />
+  <meta name="description" content="WiFi Duck" />
+  <meta name="author" content="Spacehuhn - Stefan Kremser" />
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>WiFi Duck | About</title>
+</head>
+
+<body>
+  <nav>
+    <ul class="menu">
+      <li><a href="index.html">WiFi Duck</a></li>
+      <li><a href="settings.html">Settings</a></li>
+      <li><a href="terminal.html">Terminal</a></li>
+      <li><a href="credits.html">About</a></li>
+    </ul>
+  </nav>
+  <div id="status"></div>
+  <main>
+    <section>
+      <h1>Disclaimer</h1>
+      <p>
+        This is a tool.<br>
+        It's neither good nor bad.<br>
+        Use it to do good, to study and to test.<br>
+        Never use it to do harm or create damage!<br>
+        <br>
+        The continuation of this project counts on you!
+      </p>
+    </section>
+    <section>
+      <h1>License</h1>
+      <p>
+        MIT License<br>
+        Copyright (c) 2019 Stefan Kremser<br>
+        <br>
+        Permission is hereby granted, free of charge, to any person obtaining a copy
+        of this software and associated documentation files (the "Software"), to deal
+        in the Software without restriction, including without limitation the rights
+        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+        copies of the Software, and to permit persons to whom the Software is
+        furnished to do so, subject to the following conditions:<br>
+        <br>
+        The above copyright notice and this permission notice shall be included in all
+        copies or substantial portions of the Software.<br>
+        <br>
+        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+        SOFTWARE.
+      </p>
+    </section>
+    <section>
+      <h1>Credits</h1>
+      <p>
+        Other software used for this project:<br>
+        - <a href="https://www.arduino.cc" target="_blank">Arduino</a><br>
+        - <a href="https://github.com/adafruit/Adafruit_NeoPixel" target="_blank">Neopixel Library</a><br>
+        - <a href="https://github.com/adafruit/Adafruit_DotStar" target="_blank">Dotstar Library</a><br>
+        - <a href="https://github.com/esp8266/Arduino" target="_blank">ESP8266 Arduino Core</a><br>
+        - <a href="https://github.com/me-no-dev/ESPAsyncTCP" target="_blank">ESPAsyncTCP</a><br>
+        - <a href="https://github.com/me-no-dev/ESPAsyncWebServer" target="_blank">ESPAsyncWebServer</a><br>
+        - <a href="https://github.com/spacehuhn/SimpleCLI" target="_blank">SimpleCLI</a>
+      </p>
+    </section>
+    <section>
+      <h1>Thanks</h1>
+      <p>
+        Thanks to everyone that helped making this project reality, especially:<br>
+        - <a href="https://deantonious.es" target="_blank">deantonious</a> for helping to design and improve the user experience<br>
+        - <a href="youtube.com/seytonic" target="_blank">Seytonic</a> for educating people about the topic<br>
+        - <a href="https://dstike.com/" target="_blank">Travis Lin</a> for creating, selling and financially supporting us with custom made hardware<br>
+        - and YOU for using it!
+      </p>
+    </section>
+  </main>
+  <footer>
+    <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a>
+    <br><br>
+    <span id="version"></span><br>
+    Copyright (c) 2019 Stefan Kremser<br>
+    <a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
+  </footer>
+</body>
+
 </html>
