Added and updated credits

--- a/web/credits.html
+++ b/web/credits.html
@@ -70,7 +70,7 @@
         - <a href="https://www.arduino.cc" target="_blank">Arduino</a><br>
         - <a href="https://github.com/adafruit/Adafruit_NeoPixel" target="_blank">Neopixel Library</a><br>
         - <a href="https://github.com/adafruit/Adafruit_DotStar" target="_blank">Dotstar Library</a><br>
-        - <a href="https://github.com/esp8266/Arduino" target="_blank">ESP8266 Arduino Core</a><br>
+        - <a href="https://github.com/spacehuhn/hardware/tree/master/wifiduck" target="_blank">AVR, ESP8266 & SAMD Arduino Core</a><br>
         - <a href="https://github.com/me-no-dev/ESPAsyncTCP" target="_blank">ESPAsyncTCP</a><br>
         - <a href="https://github.com/me-no-dev/ESPAsyncWebServer" target="_blank">ESPAsyncWebServer</a><br>
         - <a href="https://github.com/spacehuhn/SimpleCLI" target="_blank">SimpleCLI</a>
