Added DK to readme and web/index.html

--- a/web/index.html
+++ b/web/index.html
@@ -139,7 +139,7 @@
                         <tr>
                             <td><code>LOCALE</code></td>
                             <td><code>LOCALE DE</code></td>
-                            <td>Sets the keyboard layout. Currently supported: <code>DE</code>, <code>GB</code>, <code>US</code>, <code>ES</code>, <code>FR</code>
+                            <td>Sets the keyboard layout. Currently supported: <code>DE</code>, <code>GB</code>, <code>US</code>, <code>ES</code>, <code>FR</code>, <code>DK</code>
                             </td>
                         </tr>
                         <tr>
@@ -273,10 +273,9 @@
         <footer>
             <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a>
             <br><br>
-            <span id="version"></span><br> 
+            <span id="version"></span><br>
             Copyright (c) 2019 Stefan Kremser<br>
             <a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
         </footer>
     </body>
 </html>
-
