[Web] Rename SPIFFS to Storage

--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,7 @@
             <section>
                 <h1>Status</h1>
                 <div class="row">
-                    <p><b>SPIFFS: </b><span id="freeMemory">-</span></p>
+                    <p><b>Storage: </b><span id="freeMemory">-</span></p>
                     <button class="danger" id="format">format</button>
                     <button class="warn" id="stop">stop</button>
                     <button class="white" id="reconnect">reconnect</button>
