--- a/web/credits.html
+++ b/web/credits.html
@@ -41,7 +41,7 @@
       <h1>License</h1>
       <p>
         MIT License<br>
-        Copyright (c) 2019 Stefan Kremser<br>
+        Copyright (c) 2020 Spacehuhn Technologies<br>
         <br>
         Permission is hereby granted, free of charge, to any person obtaining a copy
         of this software and associated documentation files (the "Software"), to deal
