Updated web interface

--- a/web/credits.html
+++ b/web/credits.html
@@ -6,13 +6,14 @@
 <html>
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=0.8, minimal-ui" />
-  <meta name="theme-color" content="#36393E" />
-  <meta name="description" content="WiFi Duck" />
-  <meta name="author" content="Spacehuhn - Stefan Kremser" />
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=0.8, minimal-ui">
+  <meta name="theme-color" content="#36393E">
+
+  <meta name="description" content="WiFi Duck">
   <title>WiFi Duck | About</title>
+
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -29,9 +30,7 @@
     <section>
       <h1>Disclaimer</h1>
       <p>
-        This is a tool.<br>
-        It's neither good nor bad.<br>
-        Use it to do good, to study and to test.<br>
+        This tool is intended to be used for testing, training, and educational purposes only.<br>
         Never use it to do harm or create damage!<br>
         <br>
         The continuation of this project counts on you!
@@ -41,7 +40,7 @@
       <h1>License</h1>
       <p>
         MIT License<br>
-        Copyright (c) 2020 Spacehuhn Technologies<br>
+        Copyright (c) 2021 Spacehuhn Technologies<br>
         <br>
         Permission is hereby granted, free of charge, to any person obtaining a copy
         of this software and associated documentation files (the "Software"), to deal
@@ -87,11 +86,11 @@
     </section>
   </main>
   <footer>
-    <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a>
+    <a href="https://github.com/spacehuhntech/WiFiDuck" target="_blank">Source</a>
     <br><br>
     <span id="version"></span><br>
-    Copyright (c) 2019 Stefan Kremser<br>
-    <a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
+    Copyright (c) 2021 Spacehuhn Technologies<br>
+    <a href="https://spacehuhn.com" target="_blank">spacehuhn.com</a>
   </footer>
 </body>
 
