--- a/web/error404.html
+++ b/web/error404.html
@@ -5,14 +5,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=0.8, minimal-ui" />
-        <meta name="theme-color" content="#36393E" />
-        <meta name="description" content="WiFi Duck" />
-        <meta name="author" content="Spacehuhn - Stefan Kremser"/>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=0.8, minimal-ui">
+        <meta name="theme-color" content="#36393E">
+
+        <meta name="description" content="WiFi Duck">
+        <title>WiFi Duck | 404</title>
+
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="script.js"></script>
-        <title>WiFi Duck | Error</title>
     </head>
     <body>
         <nav>
@@ -30,15 +31,16 @@
 				<h1>404</h1>
 				<p>
 				Page not found :(
-				</p>
+                </p>
+                <a class="primary" href="index.html">Back to Homepage</a>
 			</section>
 		</main>
         <footer>
-            <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a>
+            <a href="https://github.com/spacehuhntech/WiFiDuck" target="_blank">Source</a>
             <br><br>
-            <span id="version"></span><br> 
-            Copyright (c) 2019 Stefan Kremser<br>
-            <a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
+            <span id="version"></span><br>
+            Copyright (c) 2021 Spacehuhn Technologies<br>
+            <a href="https://spacehuhn.com" target="_blank">spacehuhn.com</a>
         </footer>
     </body>
 </html>
