--- a/web/index.html
+++ b/web/index.html
@@ -1,20 +1,20 @@
 <!--
-    Copyright (c) 2019 Stefan Kremser
     This software is licensed under the MIT License. See the license file for details.
-    Source: github.com/spacehuhn/WiFiDuck
+    Source: https://github.com/spacehuhntech/WiFiDuck
 -->
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=0.8, minimal-ui" />
-        <meta name="theme-color" content="#36393E" />
-        <meta name="description" content="WiFi Duck" />
-        <meta name="author" content="Spacehuhn - Stefan Kremser"/>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=0.8, minimal-ui">
+        <meta name="theme-color" content="#36393E">
+
+        <meta name="description" content="WiFi Duck">
+        <title>WiFi Duck</title>
+
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="script.js"></script>
         <script src="index.js"></script>
-        <title>WiFi Duck</title>
     </head>
     <body>
         <nav>
@@ -69,13 +69,13 @@
                 </div>
             </section>
             <section>
-                <h1>Documentation</h1>
-                <h2>Ducky Script</h2>
+                <!--<h1>Documentation</h1>-->
+                <h2>Scripting</h2>
                 <h3>Basics</h3>
                 <p>
-                    Keys are separated by a single space.
-                    <br> Everything written in a single line gets pressed and released at the same time.
-                    <br> To write text, use the STRING function.
+                    Keys are separated by a single space.<br>
+                    Everything written in a single line gets pressed and released at the same time.<br>
+                    To write text, use the STRING function.
                 </p>
                 <table>
                     <thead>
@@ -139,7 +139,7 @@
                         <tr>
                             <td><code>LOCALE</code></td>
                             <td><code>LOCALE DE</code></td>
-                            <td>Sets the keyboard layout. Available: <code>DE</code>, <code>GB</code>, <code>US</code>, <code>ES</code>, <code>FR</code>, <code>DK</code>, <code>RU</code>
+                            <td>Sets the keyboard layout. Available: <code>DE</code>, <code>GB</code>, <code>US</code>, <code>ES</code>, <code>FR</code>, <code>DK</code>, <code>RU</code>, <code>BE</code>, <code>PT</code>, <code>IT</code>
                             </td>
                         </tr>
                         <tr>
@@ -271,11 +271,11 @@
             </section>
         </main>
         <footer>
-            <a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a>
+            <a href="https://github.com/spacehuhntech/WiFiDuck" target="_blank">Source</a>
             <br><br>
             <span id="version"></span><br>
-            Copyright (c) 2019 Stefan Kremser<br>
-            <a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
+            Copyright (c) 2021 Spacehuhn Technologies<br>
+            <a href="https://spacehuhn.com" target="_blank">spacehuhn.com</a>
         </footer>
     </body>
 </html>
