--- a/web/settings.html
+++ b/web/settings.html
@@ -4,27 +4,27 @@
 -->
 <!DOCTYPE html>
 <html>
-  	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=0.8, minimal-ui">
-		<meta name="theme-color" content="#36393E">
-		<meta name="description" content="WiFi Duck">
-		<meta name="author" content="Spacehuhn - Stefan Kremser">
-		<link rel="stylesheet" type="text/css" href="style.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=0.8, minimal-ui">
+        <meta name="theme-color" content="#36393E">
 
-		<script src="script.js"></script>
-		<script src="settings.js"></script>
-    	<title>WiFi Duck | Settings</title>
-  	</head>
+        <meta name="description" content="WiFi Duck">
+        <title>WiFi Duck | Settings</title>
+
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="script.js"></script>
+        <script src="settings.js"></script>
+    </head>
   	<body>
-		<nav>
-			<ul class="menu">
-				<li><a href="index.html">WiFi Duck</a></li>
-				<li><a href="settings.html">Settings</a></li>
-				<li><a href="terminal.html">Terminal</a></li>
-				<li><a href="credits.html">About</a></li>
-			</ul>
-		</nav>
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">WiFi Duck</a></li>
+                <li><a href="settings.html">Settings</a></li>
+                <li><a href="terminal.html">Terminal</a></li>
+                <li><a href="credits.html">About</a></li>
+            </ul>
+        </nav>
 		<div id="status"></div>
 		<main>
 			<section>
@@ -58,8 +58,8 @@
 				<h1>Update</h1>
 
 				<p>
-					Go to <a href="https://github.com/spacehuhn/WiFiDuck/releases" target="_blank">https://wifiduck.com/releases</a>
-					to check for updates. Select a .bin file and press upload to flash the device.<br>
+					Go to <a href="https://github.com/spacehuhntech/WiFiDuck/releases" target="_blank">wifiduck.com/releases</a>
+					to check for updates.<br>Select a .bin file and press upload to update the device.<br>
 				</p>
 
 				<form method='POST' action='/update' enctype='multipart/form-data'>
@@ -67,12 +67,12 @@
 				<input type='submit' class="warn" value='Upload'>
 				</form>
 			</section>
-        <footer>
-          	<a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a>
-          	<br><br>
-          	<span id="version"></span><br>
-          	Copyright (c) 2019 Stefan Kremser<br>
-          	<a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
-		</footer>
+			<footer>
+				<a href="https://github.com/spacehuhntech/WiFiDuck" target="_blank">Source</a>
+				<br><br>
+				<span id="version"></span><br>
+				Copyright (c) 2021 Spacehuhn Technologies<br>
+				<a href="https://spacehuhn.com" target="_blank">spacehuhn.com</a>
+			</footer>
 	</body>
 </html>
