--- a/web/terminal.html
+++ b/web/terminal.html
@@ -1,31 +1,30 @@
 <!--
-	Copyright (c) 2019 Stefan Kremser
 	This software is licensed under the MIT License. See the license file for details.
-	Source: github.com/spacehuhn/WiFiDuck
+	Source: https://github.com/spacehuhntech/WiFiDuck
 -->
 <!DOCTYPE html>
 <html>
-  	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=0.8, minimal-ui">
-		<meta name="theme-color" content="#36393E">
-		<meta name="description" content="WiFi Duck">
-		<meta name="author" content="Spacehuhn - Stefan Kremser">
-		<link rel="stylesheet" type="text/css" href="style.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=0.8, minimal-ui">
+        <meta name="theme-color" content="#36393E">
 
-		<script src="script.js"></script>
-		<script src="terminal.js"></script>
-    	<title>WiFi Duck | Terminal</title>
-  	</head>
+        <meta name="description" content="WiFi Duck">
+        <title>WiFi Duck | Terminal</title>
+
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="script.js"></script>
+        <script src="terminal.js"></script>
+    </head>
   	<body>
-		<nav>
-			<ul class="menu">
-				<li><a href="index.html">WiFi Duck</a></li>
-				<li><a href="settings.html">Settings</a></li>
-				<li><a href="terminal.html">Terminal</a></li>
-				<li><a href="credits.html">About</a></li>
-			</ul>
-		</nav>
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">WiFi Duck</a></li>
+                <li><a href="settings.html">Settings</a></li>
+                <li><a href="terminal.html">Terminal</a></li>
+                <li><a href="credits.html">About</a></li>
+            </ul>
+        </nav>
 		<div id="status"></div>
 		<main>
 			<section>
@@ -41,13 +40,13 @@
 				</div>
 			</section>
 		</main>
-		<footer>
-			<a href="https://github.com/spacehuhn/WiFiDuck" target="_blank">Source</a>
-			<br><br>
-			<span id="version"></span><br>
-			Copyright (c) 2019 Stefan Kremser<br>
-			<a href="https://spacehuhn.io" target="_blank">spacehuhn.io</a>
-		</footer>
+        <footer>
+            <a href="https://github.com/spacehuhntech/WiFiDuck" target="_blank">Source</a>
+            <br><br>
+            <span id="version"></span><br>
+            Copyright (c) 2021 Spacehuhn Technologies<br>
+            <a href="https://spacehuhn.com" target="_blank">spacehuhn.com</a>
+        </footer>
   	</body>
 </html>
   
